--- a/RocketProcessDesktop/RocketProcessDesktop.csproj
+++ b/RocketProcessDesktop/RocketProcessDesktop.csproj
@@ -6,11 +6,13 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ApplicationIcon>launch.ico</ApplicationIcon>
   </PropertyGroup>
 
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebView.WindowsForms" Version="6.0.541" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 
@@ -22,5 +24,9 @@
 		<None Include="wwwroot\**">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Content Include="launch.ico" />
 	</ItemGroup>
 </Project>
