JTA - JWT Login

--- a/RocketProcess.Services/RocketProcess.Services.csproj
+++ b/RocketProcess.Services/RocketProcess.Services.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RocketProcess\Shared\RocketProcess.Shared.csproj" />
   </ItemGroup>
 
