--- a/RocketProcess.Razor/RocketProcess.Razor.csproj
+++ b/RocketProcess.Razor/RocketProcess.Razor.csproj
@@ -51,6 +51,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.SessionStorage" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.10" />
     <PackageReference Include="MudBlazor" Version="6.0.17" />
